# Grim_Methods_of_Computation

./: .gitignore  README.md  main.py  pyproject.toml
src/grimMethods/: neuralNetwork.py  neuron.py
src/grimMethods.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: GPU.py  test.py
