[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "grimMethods"
version = "0.0.1"
description = "A Python library for Machine Learning"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Amelia Hoyos", email = "amelia327.hoyos@gmail.com"}
]

dependencies = [
    "pandas",
    "numpy>=1.21.6",
    "matplotlib>=3.5.3",
]

[tool.setuptools.packages.find]
where = ["src"]